[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-pricing"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Core scientific stack
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",

    # Statistical / ML
    "statsmodels",
    "scikit-learn",
    "arch",
    "pmdarima",

    # Gradient boosting / explainability
    "xgboost",
    "optuna",
    "shap",

    # Market data
    "yfinance",

    # Quant / derivatives
    "QuantLib",

    # Internal engine
    # To use the local copy instead: pip install -e ../quant-risk-engine
    "quant-risk @ git+https://github.com/mrspatbile/quant-risk-engine.git",

    # Notebooks
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

# notebooks-only project
# no Python packages to install, suppress setuptools auto-discovery
[tool.setuptools]
packages = ["nb_utils"] 